--- a/css/style.css
+++ b/css/style.css
@@ -19,6 +19,7 @@ body {
     letter-spacing: 0.03em;
 }
 
+                   /* HEADER */
 .logo {
     font-family: 'Raleway', sans-serif;
     font-weight: 700;
@@ -41,7 +42,6 @@ body {
     color: #2196F3;
 }
 
-                   /* HEADER */
 .header-page {
     /* width: 1600px;
     height: 80px; */
@@ -78,6 +78,7 @@ body {
 }
 
 .hero-btn {
+    font-family: inherit;
     height: 50px;
     width: 200px;
     font-weight: 700;
@@ -90,6 +91,13 @@ body {
     box-shadow: 0px 4px 4px rgba(0, 0, 0, 0.15);
     border-radius: 4px;
     cursor: pointer;
+}
+
+.hero-btn:hover,
+.hero-btn:focus {
+    background: #188CE8;
+    box-shadow: 0px 4px 4px rgba(0, 0, 0, 0.15);
+    border-radius: 4px;
 }
 
                     /* ABOUT */
@@ -163,12 +171,26 @@ background: #FFFFFF;
     color: #FFFFFF;
 }
 
+.footer-address:hover,
+.footer-address:focus {
+    color: #2196F3;
+}
+
 .address {
     font-weight: 400;
     font-size: 14px;
     line-height: 1.71;
     letter-spacing: 0.03em;
     color: rgba(255, 255, 255, 0.6);
+}
+
+.address:hover,
+.address:focus {
+    color: #2196F3;
+}
+
+.address-section {
+    font-style: normal;
 }
 
 /* .address:hover,
@@ -181,6 +203,7 @@ background: #FFFFFF;
 }
                      /* BATTONS */
 .filter-btn {
+    font-family: inherit;
     height: 38px;
     /* width: auto; */
     background: #F5F4FA;
@@ -188,7 +211,7 @@ background: #FFFFFF;
    cursor: pointer;
    font-weight: 500;
     font-size: 16px;
-    line-height: 26px;
+    line-height: 1.63;
     text-align: center;
     letter-spacing: 0.03em;
 }
@@ -221,4 +244,7 @@ background: #FFFFFF;
     letter-spacing: 0.03em;
     color: #757575;
 
+}
+.curent {
+    color: #2196F3;
 }
