--- a/css/style.css
+++ b/css/style.css
@@ -1,7 +1,18 @@
+:root {
+--accent-color: #2196F3;
+--fon-color: #FFFFFF;
+--text-color: #212121;
+--logo-color: #000000;
+--hero-footer-bgr: #2F303A;
+--filter-btn-team: #F5F4FA;
+--p-color: #757575;
+--btn-hover: #188CE8;
+
+}
 body {
     font-family: 'Roboto', sans-serif;
-    color: #212121;
-    background: #FFFFFF;
+    color: var(--text-color);
+    background: var(--fon-color);
 }
 
 .link {
@@ -19,6 +30,10 @@ body {
     letter-spacing: 0.03em;
 }
 
+.curent {
+    color: var(--accent-color);
+}
+
                    /* HEADER */
 .logo {
     font-family: 'Raleway', sans-serif;
@@ -26,7 +41,7 @@ body {
     font-size: 26px;
     line-height: 1.19;
     letter-spacing: 0.03em;
-    color: #000000;
+    color: var(--logo-color);
     }
 
 .logo-footer {
@@ -35,17 +50,17 @@ body {
     font-size: 26px;
     line-height: 1.19;
     letter-spacing: 0.03em;
-    color: #FFFFFF;;
+    color: var(--fon-color);
 }
     
 .logo-first {
-    color: #2196F3;
+    color: var(--accent-color);
 }
 
 .header-page {
     /* width: 1600px;
     height: 80px; */
-    background: #FFFFFF;
+    background: var(--fon-color);
 }
 
 .header-link {
@@ -53,19 +68,19 @@ body {
     font-size: 14px;
     line-height: 1.14;
     letter-spacing: 0.02em;
-    color: #212121;
+    color: var(--text-color);
 } 
 
 .header-link:hover,
 .header-link:focus {
-    color: #2196F3;
+    color: var(--accent-color);
 }
 
                     /* HERO */
 .hero {
     width: 1600;
     height: auto;
-    background: #2F303A;
+    background: var(--hero-footer-bgr);
 }
 
 .hero-title {
@@ -74,7 +89,7 @@ body {
     line-height: 1.36;
     letter-spacing: 0.06em;
     text-transform: uppercase;
-    color: #FFFFFF;
+    color: var(--fon-color);
 }
 
 .hero-btn {
@@ -86,8 +101,8 @@ body {
     line-height: 1.87;
     display: flex;
     letter-spacing: 0.06em;
-    color: #FFFFFF;
-    background: #2196F3;
+    color: var(--fon-color);
+    background: var(--accent-color);
     box-shadow: 0px 4px 4px rgba(0, 0, 0, 0.15);
     border-radius: 4px;
     cursor: pointer;
@@ -95,18 +110,18 @@ body {
 
 .hero-btn:hover,
 .hero-btn:focus {
-    background: #188CE8;
+    background: var(--btn-hover);
     box-shadow: 0px 4px 4px rgba(0, 0, 0, 0.15);
     border-radius: 4px;
 }
 
                     /* ABOUT */
 .about {
-background: #FFFFFF;
+background: var(--fon-color);
 }
 
 .about-title-hidden {
-    color: #FFFFFF;
+    color: var(--fon-color);
 }
 
 .about-heading {
@@ -122,7 +137,7 @@ background: #FFFFFF;
     font-size: 14px;
     line-height: 1.71;
     letter-spacing: 0.03em;
-    color: #757575;
+    color: var(--p-color);
 }
 
                     /* SERVISES */
@@ -131,13 +146,13 @@ background: #FFFFFF;
 
                     /* TEAM */
 .team {
-    background: #F5F4FA;
+    background: var(--filter-btn-team);
     width: 1600px;
     height: auto;
 }
 
 .team-item {
-    background: #FFFFFF;   
+    background: var(--fon-color);   
     box-shadow: 0px 1px 3px rgba(0, 0, 0, 0.12), 0px 1px 1px rgba(0, 0, 0, 0.14), 0px 2px 1px rgba(0, 0, 0, 0.2);
     border-radius: 0px 0px 4px 4px;
 }
@@ -154,13 +169,13 @@ background: #FFFFFF;
     font-size: 16px;
     line-height: 1.19;
     letter-spacing: 0.03em;
-    color: #757575;
+    color: var(--p-color);
 }
 
                     /* FOOTER */
 
 .footer {
-    background: #2F303A;
+    background: var(--hero-footer-bgr);
 }
 
 .footer-address {
@@ -168,12 +183,12 @@ background: #FFFFFF;
     font-size: 14px;
     line-height: 1.71;
     letter-spacing: 0.03em;
-    color: #FFFFFF;
+    color: var(--fon-color);
 }
 
 .footer-address:hover,
 .footer-address:focus {
-    color: #2196F3;
+    color: var(--accent-color);
 }
 
 .address {
@@ -186,7 +201,7 @@ background: #FFFFFF;
 
 .address:hover,
 .address:focus {
-    color: #2196F3;
+    color: var(--accent-color);
 }
 
 .address-section {
@@ -202,11 +217,14 @@ background: #FFFFFF;
 
 }
                      /* BATTONS */
+.portfilio-title {
+    color: var(--fon-color);
+}
 .filter-btn {
     font-family: inherit;
     height: 38px;
-    /* width: auto; */
-    background: #F5F4FA;
+    color: var(--text-color);
+    background: var(--filter-btn-team);
     border-radius: 4px;
    cursor: pointer;
    font-weight: 500;
@@ -218,17 +236,14 @@ background: #FFFFFF;
 
 .filter-btn:hover,
 .filter-btn:focus {
-    color: #FFFFFF;
-    background:#2196F3;
-    background: #2196F3;    
+    color: var(--fon-color);
+    background: var(--accent-color);    
     box-shadow: 0px 3px 1px rgba(0, 0, 0, 0.1), 0px 1px 2px rgba(0, 0, 0, 0.08), 0px 2px 2px rgba(0, 0, 0, 0.12);
     border-radius: 4px;
 }
 
                         /* PORTFOLIO */
-.portfilio-title {
-    color: #FFFFFF;
-}
+
 
 .portfolio-heading {
     font-weight: 700;
@@ -242,9 +257,6 @@ background: #FFFFFF;
     font-size: 16px;
     line-height: 1.88;
     letter-spacing: 0.03em;
-    color: #757575;
+    color: var(--p-color);
 
-}
-.curent {
-    color: #2196F3;
 }
