--- a/css/style.css
+++ b/css/style.css
@@ -27,14 +27,12 @@ body {
 .section-title {
   font-size: 36px;
   line-height: 1.17;
-
 }
 
 /* HEADER */
 
-
 .logo {
-  font-family: 'Raleway', sans-serif;;
+  font-family: 'Raleway', sans-serif;
   font-weight: 700;
   font-size: 26px;
   line-height: 1.19;
@@ -49,7 +47,6 @@ body {
   background-color: var(--fon-color);
 }
 
-
 .header-link {
   font-weight: 500;
   line-height: 1.14;
@@ -63,8 +60,8 @@ body {
 }
 
 .curent {
-    color: var(--accent-color);
-  }
+  color: var(--accent-color);
+}
 
 /* HERO */
 .hero {
@@ -83,7 +80,6 @@ body {
 }
 
 .hero-btn {
-  
   font-family: inherit;
   height: 50px;
   width: 200px;
@@ -161,25 +157,23 @@ body {
   background-color: var(--hero-footer-bgr);
 }
 .logo-footer {
-    font-family: 'Raleway', sans-serif;;
-    font-weight: 700;
-    font-size: 26px;
-    line-height: 1.19;
-    color: var(--fon-color);
-  }
+  font-family: 'Raleway', sans-serif;
+  font-weight: 700;
+  font-size: 26px;
+  line-height: 1.19;
+  color: var(--fon-color);
+}
 .footer-address {
   font-weight: 400;
   line-height: 1.71;
   color: var(--fon-color);
 }
 
-
 .address {
   font-weight: 400;
   line-height: 1.71;
   color: rgba(255, 255, 255, 0.6);
 }
-
 
 .address-section {
   font-style: normal;
@@ -212,8 +206,8 @@ body {
 }
 
 .accent-btn {
-  color: var(--fon-color) ;
-  background-color: var(--accent-color)
+  color: var(--fon-color);
+  background-color: var(--accent-color);
 }
 
 /* PORTFOLIO */
